--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.7.2",
     "react-i18next": "^11.5.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2"
   },
